修改错别字

--- a/操作系统.md
+++ b/操作系统.md
@@ -613,7 +613,7 @@ go to step2;
 
 动态优先数:随着进程运行而改变
 
-5.循环轮转屌哦度 Round Robin
+5.循环轮转调度 Round Robin
 
 利用队列,把所有的就绪进程按照先入先出的办法,以时间片q为单位使用CPU,在逻辑上所有的进程构成一个环.
 
