更新代码块

--- a/操作系统.md
+++ b/操作系统.md
@@ -563,6 +563,7 @@ consumer(){
 
 桌子上有一个盘子，每次只能向其中放入一个水果。爸爸专门向盘子中放苹果，妈妈专门向盘子中放橘子，儿子专门吃盘子中的橘子，女儿专门吃盘子中的苹果。盘子为空时，爸爸或妈妈才能向盘子中放一个水果，当且仅当盘子中有自己需要的水果时，儿子或女儿可以从盘子中取出。
 
+```
 semaphore plate==1, apple == 0, orange == 0;
 dad(){
   while(1){
@@ -600,6 +601,12 @@ daughter(){
     eat the apple;
   }
 }
+```
+
+**读者-写者问题**
+
+有读者和写者两组并发关系，共享一个文件，当两个或以上的进程同时访问共享数据时不会产生副作用，但若某个写进程和其他进程（读进程或写进程）同时访问共享数据时则可能导致数据不一致的错误。因此要求：允许多个读者可以同时对文件执行读写操作。只允许写者往文件中写信息；任一一写者在完成写操作之前不允许其他读者或写者工作；写者执行写操作前，应让已有的读者和写者全部退出。
+
 
 =======================================================
 
@@ -1675,6 +1682,7 @@ ps:文件系统的目标是让用户以文件名来存取文件
 流失文件
 
 信息项是字节,文件的长度就是字节的数量
+
 
 *ps:*现代操作系统中文件都是流式文件,由应用程序解释和处理文件.
 
