--- a/操作系统.md
+++ b/操作系统.md
@@ -607,6 +607,35 @@ daughter(){
 
 有读者和写者两组并发关系，共享一个文件，当两个或以上的进程同时访问共享数据时不会产生副作用，但若某个写进程和其他进程（读进程或写进程）同时访问共享数据时则可能导致数据不一致的错误。因此要求：允许多个读者可以同时对文件执行读写操作。只允许写者往文件中写信息；任一一写者在完成写操作之前不允许其他读者或写者工作；写者执行写操作前，应让已有的读者和写者全部退出。
 
+```
+int count == 0;
+semaphore mutex == 1;
+semaphore rw == 1;
+
+writer(){
+  while(1){
+    P(rw);
+    writing;
+    V(rw);
+  }
+}
+reader(){
+  while(1){
+    P(mutex);
+    if(count == 0)
+      P(rw);
+    count++;
+    V(mutex);
+    reading;
+    P(mutex);
+    count--;
+    if(count == 0)
+      V(rw);
+    V(mutex);
+  }
+}
+```
+
 
 =======================================================
 
@@ -831,6 +860,7 @@ Cache + 内存 + 辅存
 ###动态地址映射
 
 定义:在程序执行过程中把逻辑地址转换为物理地址.例如MOV AX,[500].访问500单元时执行地址转换.
+
 
 映射过程:
 
